# quant_trader

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
config/: strategies.yaml  universe_presets.yaml
docs/: 00_dev_workflow.md  SECURITY.md  STATE.md  architecture.md
docs/adr/: 0001-provider-chain-order.md  0002-fallback-decorator-pattern.md  0003-parquet-cache-only.md  0004-cache-full-refetch.md  0005-granularity-strenum.md  0006-ib-insync-broker.md  0007-strategy-registry-pattern.md  0008-strategy-abc-vs-protocol.md  0009-fmp-as-primary-provider.md  0010-risk-engine-architecture.md  0011-broker-interface-architecture.md  0012-live-loop-architecture.md  0013-live-resilience.md  0014-docker-deployment-architecture.md  0015-cache-refresh-architecture.md  0016-strategy-documentation.md
docs/prd/: README.md  TEMPLATE.md
docs/requirements/: nfrs.md
docs/strategies/: etf_rotation.md  momentum.md  rsi_mean_reversion.md  sma_cross.md
docs/uml/: README.md
scripts/: backtest_dashboard.py  entrypoint.sh  fetch_data.py  run_backtest.py
src/quant_trader/: __init__.py  cli.py
tests/: conftest.py  test_dashboard_smoke.py  test_package.py
tests/backtest/: test_cli.py  test_comparison.py  test_dashboard_runner.py  test_engine.py  test_fill.py  test_metrics.py  test_portfolio.py  test_risk.py  test_sizer.py
tests/data/: __init__.py  test_alpha_vantage.py  test_cache.py  test_cache_refresh.py  test_cli.py  test_errors.py  test_factory.py  test_fallback.py  test_financial_modelling_prep.py  test_incremental.py  test_refresh.py  test_service.py  test_stockdata_provider.py  test_yfinance_provider.py
tests/live/: __init__.py  test_bars.py  test_cli.py  test_factory.py  test_journal.py  test_loop.py  test_mock_broker.py  test_summary.py
tests/ops/: __init__.py  test_ci_workflow.py  test_compose.py  test_dockerfile.py  test_dockerignore.py
tests/strategies/: test_base.py  test_loader.py  (+9 more)
(+132 files in other folders)
