[project]
name = "quant-trader"
version = "0.1.0"
description = "Quant Trading App: backtest + live (IBKR) for US/EU stocks and ETFs"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }
authors = [
    { name = "Tobias Bruns", email = "tbbruns@gmx.de" },
]
keywords = ["quant", "trading", "backtest", "ibkr", "etf"]

dependencies = [
    "pandas>=2.2,<3",
    "numpy>=1.26,<3",
    "pyarrow>=15",
    "requests>=2.31",
    "yfinance>=0.2.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "plotly>=5.22",
]

[project.optional-dependencies]
live = ["ib_insync>=0.9.86"]
ui = ["streamlit>=1.35"]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "freezegun>=1.5",
    "ruff>=0.6",
    "pre-commit>=3.8",
]
all = ["quant-trader[live,ui,dev]"]

[project.scripts]
qtrader = "quant_trader.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_trader"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "freezegun>=1.5",
    "ruff>=0.6",
    "pre-commit>=3.8",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["data", "reports", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: long-running tests",
    "live: requires live broker connection (skipped by default)",
    "integration: integration test",
]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = ["data", "reports", ".venv"]
